--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test:integration": "mocha --recursive test/integration"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
-    "express-handlebars": "^3.0.0"
+    "cookie-parser": "^1.3.3",
+    "cors": "^2.8.4",
+    "express": "^4.13.3",
+    "express-handlebars": "^3.0.0",
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
