--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "cors": "^2.8.4",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
+    "lodash": "^4.17.5",
     "morgan": "^1.6.1",
+    "node-cron": "^1.2.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "^2.3.0",
     "socket.io": "^2.0.4"
   },
