--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:integration": "mocha --recursive test/integration"
   },
   "dependencies": {
+    "amqplib": "^0.5.2",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "cors": "^2.8.4",
