--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha --recursive test",
-    "test:coverage": "nyc npm test",
+    "test:coverage": "nyc --reporter=html --reporter=text npm test",
     "test:unit": "mocha --recursive test/middleware test/models test/routes",
     "test:integration": "mocha --recursive test/integration"
   },
@@ -22,6 +22,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "serve-favicon": "^2.3.0",
+    "sinon": "^4.4.2",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
